--- a/app/server/package.json
+++ b/app/server/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "express": "^4.16.2",
-    "mongoose": "^4.13.8"
+    "mongoose": "^4.13.8",
+    "file-type": "^5.2.0",
+    "multer": "^1.3.0"
   }
 }
