--- a/app/vue/package.json
+++ b/app/vue/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.17.1",
     "jquery": "^3.2.1",
     "vue": "^2.5.2",
+    "vue-pubnub": "^1.0.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
